# M_unicode

./: README.md  STATUS.md  TEST.md  ford.md  fpm.rsp  fpm.toml  meson.build
app/: backslash_to_utf8.f90  codepoint_range.f90  codepoints.f90  count_glyphs.f90  demo_readline.f90  encode_codepoints.f90  escape.f90  find_non_ascii.f90  upside_down.f90  utf8_len.f90  utf8_to_backslash.f90  utf8_to_ucs4_code.f90  uview.f90
data/: Greek.utf8  The_Crow_and_the_Fox.escape  peace_on_earth.utf8  x
docs/: 3629_UTF-8__a_transformation_format_of_ISO_10646.html  BOOK_M_unicode.html  M_unicode.3m_unicode.html  M_unicode.js  STATUS.md  TODO.txt  add_backslash.3m_unicode.html  add_border.3m_unicode.html  adjustl.3m_unicode.html  adjustr.3m_unicode.html  character.3m_unicode.html  codepoints_to_utf8.3m_unicode.html  escape.3m_unicode.html  expand_html.3m_unicode.html  expandtabs.3m_unicode.html  fmt.3m_unicode.html  get_arg.3m_unicode.html  get_env.3m_unicode.html  glob.3m_unicode.html  ichar.3m_unicode.html  index.3m_unicode.html  index.html  isascii.3m_unicode.html  isblank.3m_unicode.html  isspace.3m_unicode.html  join.3m_unicode.html  len.3m_unicode.html  len_trim.3m_unicode.html  lower.3m_unicode.html  man3.html  manpages.tgz  manual.txt  pad.3m_unicode.html  pound_to_box.3m_unicode.html  readline.3m_unicode.html  release_notes.md  remove_backslash.3m_unicode.html  repeat.3m_unicode.html  replace.3m_unicode.html  reverse.3m_unicode.html  (+14 more)
example/: bom_start.f90  boz.f90  codepoint.f90  concatenate.f90  construct.f90  demo_M_unicode.f90  demo_add_border.f90  demo_adjustl.f90  demo_adjustr.f90  demo_character.f90  demo_codepoints_to_utf8.f90  demo_escape.f90  demo_expand.f90  demo_expand_html.f90  demo_expandtabs.f90  demo_fmt.f90  demo_get_arg.f90  demo_get_env.f90  demo_glob.f90  demo_ichar.f90  demo_index.f90  demo_join.f90  demo_len.f90  (+33 more)
(+445 files in other folders)
